# datasketch

./: .buildinfo  .flake8  .gitignore  .travis.yml  AGENTS.md  DESCRIPTION.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  documentation.html  genindex.html  hyperloglog.html  index.html  lsh.html  lshbloom.html  lshensemble.html  lshforest.html  minhash.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  weightedminhash.html
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  checks.yml  doc.yml  pypi.yml  python-package.yml  restrict-releases.yml  test-cassandra.yml  test-mongo.yml  test-redis.yml  test.yml
_modules/: index.html
_modules/datasketch/: hnsw.html  hyperloglog.html  lean_minhash.html  lsh.html  lsh_bloom.html  lshensemble.html  lshforest.html  minhash.html  weighted_minhash.html
_modules/datasketch/aio/: lsh.html
_modules/datasketch/experimental/aio/: lsh.html
_sources/: index.rst.txt  lsh.rst.txt  lshforest.rst.txt  weightedminhash.rst.txt
_static/: alabaster.css  documentation_options.js
benchmark/: .hyperloglog_benchmark.py.swp  async_redis_storage_benchmark.py  b_bit_minhash_benchmark.py  cardinality_benchmark.py  hyperloglog_benchmark.py  inclusion_benchmark.py  lsh_benchmark.py  lsh_benchmark_plot.py  lshensemble_benchmark.py  lshensemble_benchmark_plot.py  lshforest_benchmark.py  lshforest_benchmark_plot.py  minhash_benchmark.py  similarity_benchmark.py  weighted_minhash_benchmark.py
benchmark/index/: average_precision.py  exact_set_similarity_search.py  jaccard_threshold_benchmark.py  jaccard_topk_benchmark.py  plot_jaccard_threshold_benchmark.py  plot_jaccard_topk_benchmark.py  utils.py
benchmark/indexes/containment/: lshensemble_benchmark.py  lshensemble_benchmark_plot.py  requirements.txt  utils.py
benchmark/indexes/jaccard/: .gitignore  README.md  compare_lsh_vs_lshbloom.py  compare_lsh_vs_lshtrunc.py  exact.py  hnsw.py  lsh.py  lshforest.py  plot_distance_distribution.py  plot_set_distribution.py  plot_similarity_distribution.py  plot_threshold_benchmark.py  plot_threshold_benchmark_lsh.py  plot_topk_benchmark.py  plot_topk_benchmark_hnsw.py  plot_topk_benchmark_lshforest.py  plot_topk_synthetic_benchmark.py  requirements.txt  synthetic_data.py  threshold_benchmark.py  topk_benchmark.py  topk_synthetic_benchmark.py  utils.py
benchmark/lshensemble/: lshensemble_benchmark.py  lshensemble_benchmark_plot.py  utils.py
benchmark/sketch/: hyperloglog_benchmark.py
benchmark/sketches/: b_bit_minhash_benchmark.py  hyperloglog_benchmark.py  inclusion_benchmark.py  minhash_benchmark.py  minhash_gpu_benchmark.py  weighted_minhash_benchmark.py
benchmark_v2/: Justfile  main.py  pyproject.toml
benchmark_v2/benchmark_v2/: __init__.py  __main__.py  cli.py  progress.py
benchmark_v2/benchmark_v2/datasets/: __init__.py  cache.py  ground_truth.py  memmap.py  registry.py
benchmark_v2/tests/benchmark_v2/: test_cli.py  test_dataset_cache.py  test_dataset_registry.py  test_ground_truth.py  test_memmap.py
datasketch/: __init__.py  aiolsh.py  aiostorage.py  b_bit_minhash.py  bulk.py  hashfunc.py  hnsw.py  hyperloglog.py  hyperloglog_const.py  lean_minhash.py  lsh.py  lsh_bloom.py  lshensemble.py  lshensemble_partition.py  lshforest.py  minhash.py  storage.py  version.py  weighted_minhash.py
datasketch/aio/: __init__.py  lsh.py  storage.py
datasketch/async/: __init__.py  lsh.py  storage.py
datasketch/experimental/: __init__.py
datasketch/experimental/aio/: __init__.py  lsh.py  storage.py
datasketch/experimental/async/: __init__.py  lsh.py  storage.py
doc/: genindex.html  index.html  objects.inv  searchindex.js
doc/_modules/: index.html
doc/_modules/datasketch/: hyperloglog.html  lsh.html  lshforest.html  minhash.html  weighted_minhash.html
doc/_sources/: documentation.txt  index.txt
docs/: .buildinfo  README-old.html  conf.py  documentation.html  documentation.rst  genindex.html  hyperloglog.html  hyperloglog.rst  index.html  lsh.html  lsh.rst  lshbloom.rst  lshensemble.html  lshforest.html  lshforest.rst  minhash.html  minhash.rst  objects.inv  search.html  searchindex.js  weightedminhash.html
docs/_modules/: index.html
docs/_modules/datasketch/: hyperloglog.html  lean_minhash.html  lsh.html  lshensemble.html  lshforest.html  minhash.html  weighted_minhash.html
docs/_modules/datasketch/experimental/aio/: lsh.html
docs/_sources/: documentation.rst.txt  hyperloglog.rst.txt  index.txt  lsh.rst.txt  lshensemble.rst.txt  lshforest.rst.txt  minhash.rst.txt  weightedminhash.txt
docs/_static/: alabaster.css  documentation_options.js  jquery-1.11.1.js  jquery-3.1.0.js  jquery.js
docsrc/: Makefile  conf.py  documentation.rst  index.rst  lsh.rst  lshensemble.rst  lshforest.rst  minhash.rst
examples/: hyperloglog_examples.py  lsh_examples.py  lshensemble_example.py  lshforest_example.py  minhash_examples.py  weighted_minhash_examples.py
test/: hyperloglog_test.py  lean_minhash_test.py  lsh_memcached.py  lsh_postgres.py  lsh_test.py  lsh_test_async.py  lshensemble_test.py  lshforest_test.py  minhash_test.py  test_bulk.py  test_hnsw.py  test_hyperloglog.py  test_integration.py  test_lean_minhash.py  test_lsh.py  test_lsh_cassandra.py  test_lsh_mongo.py  test_lshbloom.py  test_lshensemble.py  test_lshforest.py  test_minhash.py  test_minhash_gpu.py  test_weighted_minhash.py  utils.py  weighted_minhash_test.py
test/aio/: lsh_test.py  test_lsh.py  test_lsh_mongo.py  test_suite.py
test/async/: lsh_test.py  test_suite.py
travis/: wait_for_cassandra.sh
